# football-match-prediction

./: .env.example  .gitignore  Consignes.txt  LICENSE  README.md  Rapport.docx  Reflexions_rapport  pyproject.toml  requirements.txt  ~$apport.docx
.github/workflows/: ci.yml
.venv_pred_match/: pyvenv.cfg
.venv_pred_match/Scripts/: activate  activate.bat
Donnees/: club_mapping_clean.csv  club_mapping_suggestions.csv  division_to_country_TEMPLATE.csv
Donnees/VF/: unique_elo_countries_VF.csv
Programmes/: Modélisation.ipynb  Modélisation_RF.ipynb  Modélisation_RF_V2.ipynb  Modélisation_RL.ipynb  Modélisation_RL_V2.ipynb  Modélisation_XGB.ipynb  P5A_EDA_V2.ipynb  P5A_EDA_YDataprofiling.ipynb  P5A_EDA_comparative.ipynb  P5A_Prepa_donnees_V2.ipynb  config.py
Programmes/.ipynb_checkpoints/: P5A_EDA-checkpoint.ipynb  P5A_Prepa_donnees-checkpoint.ipynb  P5A_Prepa_donnees_V2-checkpoint.ipynb
Resultats/: Régression_logistique_interprétation.docx
src/football_prediction/: __init__.py  pipeline.py
src/football_prediction/config/: __init__.py  settings.py
src/football_prediction/data/: __init__.py  cleaning.py  ingestion.py  merging.py
src/football_prediction/evaluation/: __init__.py  baseline.py  metrics.py
src/football_prediction/features/: __init__.py  elo_features.py  form_features.py  odds_features.py
src/football_prediction/models/: __init__.py  base.py  (+3 more)
tests/test_data/: test_cleaning.py  test_ingestion.py  test_merging.py
tests/test_features/: test_elo_features.py  test_odds_features.py
tests/test_models/: test_evaluation.py  test_roundtrip.py
